# rustodo

./: .gitignore  Cargo.toml
src/: cli.rs  errors.rs  io.rs  logic.rs  main.rs
